User Location in map and Navbar z-index fix

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -5,7 +5,7 @@ html {
 .Navbar {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 100000;
 }
 
 .Header {
