--- a/website/src/parks/ParkList.css
+++ b/website/src/parks/ParkList.css
@@ -14,6 +14,7 @@
   background-color: white;
   margin-top: auto;
   margin-bottom: auto;
+  z-index: 1;
 }
 
 .preview_pic {
