--- a/website/src/parks/SlideShows.css
+++ b/website/src/parks/SlideShows.css
@@ -9,3 +9,8 @@
 .bg {
   height: 25vh;
 }
+
+.react-slideshow-container .nav {
+  z-index: 1;
+  position: relative;
+}
